<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LIstViewSample</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="_5_45">5:45</string>
    <string name="transaction1">4 transactions</string>
    <string name="_3000">3000</string>
    <string name="john_doe">John Doe</string>
    <string name="transformers">Transformers</string>
    <string name="_1">1</string>
    <string name="android">Android</string>

</resources>
